--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
     <head>
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NTCCG9V2FT"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-H7T2Z9SV5C"></script>
         <script>
-            window.dataLayer = window.dataLayer || []
-            function gtag() {
-                dataLayer.push(arguments)
-            }
-            gtag('js', new Date())
-
-            gtag('config', 'G-NTCCG9V2FT')
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-H7T2Z9SV5C');
         </script>
-
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chess</title>
