Implement 50 Moves rule

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                         <svg
                             class="copy_moves_icon"
                             id="copy_moves_icon"
-                            alt="copy moves"
                             xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 115.77 122.88"
                             width="24"
@@ -78,7 +77,6 @@
                         <svg
                             class="copy_moves_icon"
                             id="copied_icon"
-                            alt="copied checkmark"
                             xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 24 24"
                             width="24"
@@ -107,7 +105,6 @@
                             xmlns="http://www.w3.org/2000/svg"
                         >
                             <g
-                                fill="none"
                                 fill-rule="evenodd"
                                 stroke="currentColor"
                                 stroke-width="1.5"
@@ -126,7 +123,6 @@
                                     d="m23,10 v4 h-4"
                                     transform="rotate(225,21,13)"
                                     stroke-linecap="round"
-                                    stroke-linejoin=""
                                 />
                             </g>
                         </svg>
@@ -147,11 +143,11 @@
                         </button>
                         <div class="playmode_player_vs_bot_color">
                             <button id="player_vs_bot_white" class="playing_color_selector generic_button">
-                                <img class="playing_color_selector_icon" src="src/assets/free-chess/white_knight.svg" />
+                                <img class="playing_color_selector_icon" src="src/assets/free-chess/white_knight.svg" alt="" />
                                 <span>White</span>
                             </button>
                             <button id="player_vs_bot_black" class="playing_color_selector generic_button">
-                                <img class="playing_color_selector_icon" src="src/assets/free-chess/black_knight.svg" />
+                                <img class="playing_color_selector_icon" src="src/assets/free-chess/black_knight.svg" alt="" />
                                 <span>Black</span>
                             </button>
                         </div>
@@ -170,7 +166,6 @@
                     <ul>
                         <li>Pawn Promotion: Variants</li>
                         <li>Game End: Threefold Repetition</li>
-                        <li>Game End: 50 Moves Rule</li>
                         <li>Game End: Insufficient Material</li>
                     </ul>
                 </div>
